working on the console but not in the website

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
             <!-- author -->
             <div class="quote-author">
-                <span id="autor">Adnalow</span>
+                <span id="author">Adnalow</span>
             </div>
             <!-- buttons -->
             <div class="button-container">
