--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Ano gang sayo? Hatdog imnida</span>
+            <span id="quote"></span>
         </div>
             <!-- author -->
             <div class="quote-author">
-                <span id="author">Adnalow</span>
+                <span id="author"></span>
             </div>
             <!-- buttons -->
             <div class="button-container">
