--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
                     <i class="fab fa-twitter"></i>
                 </button>
                 <button id="new-quote">New Quote</button>
-            </div>
         </div>
-    
+    </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
 
     <!-- Script -->
     <script src="script.js"></script>
